# anaerobic-mixing-openfoam

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  ACADEMIC_VISUALIZATION_REPORT.md  CLAUDE.md  CRITICAL_DESIGN_ISSUE.md  ISSUES.md  LICENSE  Makefile  README.md  README_PRODUCTION.md  docker_run.sh  pyproject.toml  run_simulation.py  run_simulation_amx.py  simulate_mixing.py  simulation_report.md  verify_and_visualize.py  visualize_3d_interactive.py  visualize_results.py
.github/workflows/: ci.yml
case_templates/0/: U  epsilon  k  nut  p_rgh
case_templates/constant/: g  transportProperties  turbulenceProperties
case_templates/system/: controlDict  fvSchemes  fvSolution
configs/: base.yaml  case_prod.yaml  case_sensitivity.yaml  piv_lab.yaml
data/processed/verification/: verification_report.txt
docker/: Dockerfile  apptainer.def
docs/: API_REFERENCE.md  ARCHITECTURE.md  CORRECTED_SIMULATION_RESULTS.md  FILE_MAPPING.md  PHYSICS_MODELS.md  PROCESS_FLOW.md  SIMULATION_ANALYSIS.md  WORKFLOW_VALIDATION.md  quickstart.md
scripts/: check_openfoam.sh  run_with_docker.sh
src/amx/: __init__.py  cli.py  config.py  factories.py  geometry.py  workflow.py
src/amx/core/: __init__.py  base.py  exceptions.py  interfaces.py
src/amx/energy/: __init__.py  power.py
src/amx/openfoam/: __init__.py  fvoptions.py  meshing.py  runner.py  sampling.py  writer.py
src/amx/physics/: __init__.py  jet_model.py  mixing_theory.py  models.py  sludge_rheology.py  turbulence.py
src/amx/piv/: __init__.py  compare.py  processing.py
src/amx/post/: __init__.py  advanced_metrics.py  fields.py  io.py  metrics.py  viz.py
src/amx/uncertainty/: quantification.py
src/amx/utils/: __init__.py  logging.py  logging_enhanced.py  paths.py
src/amx/verification/: mesh_independence.py
validation/: benchmark_cases.py
